added jquery and sortable

--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -3,9 +3,9 @@
     <div class="album lt-cover">
       <img class="cover" src=<%= "https://source.unsplash.com/random/300x300?v=" + s.id.to_s %>>
       <div class="info">
-        <h2 class="title"contenteditable="true"><%= s.title %></h2>
-        <p class="artist" contenteditable="true"><%= s.artist %></p>
-        <p class="duration" contenteditable="true"><%= s.duration %></p>
+        <h2 class="title"><%= s.title %></h2>
+        <p class="artist"><%= s.artist %></p>
+        <p class="duration"><%= s.duration %></p>
       </div>
     </div>
   <% end %>
