--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,12 +1,18 @@
 <div class='collection'>
   <% @songs.each do |s|%>
-    <div class="album lt-cover">
-      <img class="cover" src=<%= "https://source.unsplash.com/random/300x300?v=" + s.id.to_s %>>
-      <div class="info">
-        <h2 class="title"><%= s.title %></h2>
-        <p class="artist"><%= s.artist %></p>
-        <p class="duration"><%= s.duration %></p>
+    <div>
+      <div class="album lt-cover">
+        <img class="cover" src=<%= "https://source.unsplash.com/random/300x300?v=" + s.id.to_s %>>
+        <div class="info">
+          <h2 class="title"><%= s.title %></h2>
+          <p class="artist"><%= s.artist %></p>
+          <p class="duration"><%= s.duration %></p>
+        </div>
       </div>
+      <hr />
+      <button class="btn"><i class="material-icons">album</i>Show</button>
+      <button class="btn"><i class="material-icons">edit</i>Edit</button>
+      <button class="btn"><i class="material-icons">clear</i>Delete</button>
     </div>
   <% end %>
   <%= link_to 'Create a new Song', new_song_path %>
