--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -10,7 +10,17 @@
         </div>
       </div>
       <hr />
-      <button class="btn"><i class="material-icons">album</i>Show</button>
+      <button class="btn modal-trigger" data-target="showModal"><i class="material-icons">album</i>Show</button>
+      <div id="showModal" class="modal bottom-sheet">
+        <div class="modal-content">
+          <h4><%= s.title %></h4>
+          <p><%= s.artist %></p>
+        </div>
+        <div class="modal-footer">
+          <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">play</a>
+        </div>
+      </div>
+
       <button class="btn"><i class="material-icons">edit</i>Edit</button>
       <button class="btn"><i class="material-icons">clear</i>Delete</button>
     </div>
