--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -23,7 +23,23 @@
 
       <button class="btn"><i class="material-icons left">edit</i>Edit</button>
       <button class="btn"><i class="material-icons left">clear</i>Delete</button>
+        
     </div>
   <% end %>
-  <%= link_to 'Create a new Song', new_song_path %>
+  
+</div>
+
+<div class="fixed-action-btn horizontal click-to-toggle">
+  <a class="btn-floating btn-large blue-grey">
+    <i class="material-icons">menu</i>
+  </a>
+  <ul>
+    <li>
+      <%= link_to new_song_path, class: 'btn-floating green' do %>
+        <i class="material-icons">add</i>
+      <% end %>
+    </li>
+    <li><a class="btn-floating yellow darken-1"><i class="material-icons">headset</i></a></li>
+    <li><a class="btn-floating blue"><i class="material-icons">help_outline</i></a></li>
+  </ul>
 </div>
