--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -1,1 +1,16 @@
  <%= render partial: 'form' %>
+
+ <div class="fixed-action-btn horizontal click-to-toggle">
+  <a class="btn-floating btn-large blue-grey">
+    <i class="material-icons">menu</i>
+  </a>
+  <ul>
+    <li><a class="btn-floating yellow darken-1"><i class="material-icons">headset</i></a></li>
+    <li>
+      <%= link_to songs_path, class: 'btn-floating orange' do %>
+        <i class="material-icons">queue_music</i>
+      <% end %>
+    </li>
+    <li><a class="btn-floating blue"><i class="material-icons">help_outline</i></a></li>
+  </ul>
+</div>
