--- a/app/assets/stylesheets/songs.scss
+++ b/app/assets/stylesheets/songs.scss
@@ -15,7 +15,7 @@ p {
   grid-gap: 20px;
 }
 
-.album {
+.song {
   background: rgba(32, 29, 29, 0.2);
   box-shadow: 0 0 5px rgba(20, 16, 16, 0.1);
   padding: 20px;
