--- a/app/views/songs/_form.html.erb
+++ b/app/views/songs/_form.html.erb
@@ -1,12 +1,13 @@
+<h1><%= @song.id ? 'Edit Song' : 'Create Song' %></h1>
 <%= form_for @song do |f| %>
   <%= f.label :title %>
-  <%= f.text_field :title, required: true %>
+  <%= f.text_field :title, required: true, class: 'inline'%>
 
   <%= f.label :artist %>
-  <%= f.text_field :artist, required: true %>
+  <%= f.text_field :artist, required: true, class: 'inline' %>
 
   <%= f.label :duration %>
-  <%= f.text_field :duration, required: true %>
+  <%= f.text_field :duration, required: true, class: 'inline' %>
   
   <%= f.submit %>
 <% end %>
